fix spacing in menu

--- a/sass/custom/_page.scss
+++ b/sass/custom/_page.scss
@@ -41,7 +41,7 @@ body{
 #site-navigation{
 	margin: -10px 0 30px -15px;
 
-	.menu-item{
+	li{
 		margin-right: 10px;
 		text-transform: uppercase;
 	}
